// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": false,
}
`;

exports[`2- fetch 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": true,
}
`;

exports[`3- fetch error 1`] = `
Object {
  "error": true,
  "list": Array [],
  "loading": false,
}
`;

exports[`4- fetch 1`] = `
Object {
  "error": false,
  "list": Array [],
  "loading": true,
}
`;

exports[`5- fetched 1`] = `
Object {
  "error": false,
  "list": Array [
    "bitcoin",
    "hive",
    "photography",
  ],
  "loading": false,
}
`;
